# DETR-ONNX

./: .gitignore  README.md  detr_onnx.py
cpp/: CMakeLists.txt  detr.hpp  main.cpp
